update online notes 3

--- a/Notes/OnlineNotes.ipynb
+++ b/Notes/OnlineNotes.ipynb
@@ -71,6 +71,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Progress & Compress: A scalable framework for continual learning\n",
+    "\n",
+    "https://arxiv.org/abs/1805.06370\n",
+    "\n",
+    "-  As the title implies, this paper seeks to address continual learning in a scalable way\n",
+    "\n",
+    "- This paper essentially seeks to refine ideas that have been proposed in the past. For example, regularization approaches that penalize changing of weights to prevent forgetting can impare learning of new data.\n",
+    "\n",
+    "- Among things, this paper proposes an online version of EWC ( a regularization method to prevent forgetting). Some ideas used here may transfer to our interested scenario. There is a pytorch implementation of this online"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Review papers skimmed "
    ]
   },
@@ -92,40 +107,68 @@
     "https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjyqdrp2dLpAhXF6Z4KHaBJAfIQFjABegQIBBAB&url=https%3A%2F%2Fleon.bottou.org%2Fpublications%2Fpdf%2Fonline-1998.pdf&usg=AOvVaw3qK7TS52Rn59BxmanXnz1g\\n\n",
     "\n",
     "\n",
-    "- A fairly dated overview of online optimization methods. Nontheless some useful formulations of online gradient descent  algorithms and applications are present here. In hindsight, it makes sense that ML researchers once really cared about this stuff. Storage was even more of an issue not too long ago...."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Promising papers currently reading, but not yet read in desired detail"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Continual Lifelong Learning with Neural Networks: A Review"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Task-Free Continual Learning\n",
+    "- A fairly dated overview of online optimization methods. Nontheless some useful formulations of online gradient descent  algorithms (and other types as well) and applications are present here. In hindsight, it makes sense that ML researchers once really cared about this stuff. Storage was even more of an issue not too long ago....\n",
     "\n",
     "\n",
-    "- proposes transforming a  continual learning problem to an online learning problems with data distributions gradually changing and without the notion of separate tasks (similar to our situation)"
+    "- This survey as well as the one above seem to be the defacto standard references in modern papers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Progress & Compress: A scalable framework for continual learning\n",
+    "Continual Lifelong Learning with Neural Networks: A Review (2019)\n",
     "\n",
-    "-  EWC seems promising for our problem as well as pretty easy to implement. There are some pytorch implementations out there as well. Here they talk about an online version which may be eben more useful"
+    "https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjy5vLM1NTpAhUK7J4KHSDWD7wQFjABegQIAhAB&url=https%3A%2F%2Farxiv.org%2Fabs%2F1802.07569&usg=AOvVaw3fG4Wd89-GiotIbsL6bA_z\n",
+    "\n",
+    "\n",
+    "- A modern review of approaches for realtime learning type problems for neural networks\n",
+    "\n",
+    "\n",
+    "- Covers ideas beyond the shuffling of old data with new data in gradient descent \n",
+    "\n",
+    "- Since continual learning addresses a harder problem (changing tasks as well as data), some methods here are far more intricate than what we need \n",
+    "\n",
+    "    Some ideas covered that may work for us:\n",
+    "\n",
+    "- Regularization approaches where we protect knowledge by penalizing changes in the weights\n",
+    "- Dynamic architecture approaches where the depth on the neural network is dynamically changed as data is accumulated \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task-Free Continual Learning: https://arxiv.org/abs/1812.03596\n",
+    "\n",
+    "- proposes transforming a continual learning problem to an online learning problems with data distributions gradually changing and without the notion of separate tasks (similar to our situation)\n",
+    "\n",
+    "\n",
+    "- We only deal with one task in our work, so the paper is not particularly applicable to our work.\n",
+    "\n",
+    "\n",
+    "- Provides useful insight into how to think about online learning with neural networks and mitigating catastrophic inference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Some remarks on general online learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Many of the papers I've read outline the following history of online methods\n",
+    "\n",
+    "- Online learning was first established for learning linear models\n",
+    "\n",
+    "- Online learning with Kernels were later introduced. They allow for shallow nonlinear models, but do not allow for much \"nonlinearity\"  \n",
+    "\n",
+    "- Frequently, many papers note that while neural networks are superior for creating nonlinear models, they seem to suffer from a variety of issues when considered in an online context. In particular,  convergence and  catastrophic inference(forgetting of previous samples when learning new ones)  are typical issues.  Many research papers attempt to try to solve these issues in some way"
    ]
   }
  ],
