--- a/Notes/OnlineNNBenchmarking_1D.ipynb
+++ b/Notes/OnlineNNBenchmarking_1D.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "$e_1=10^{-4}$\n",
     "\n",
-    "$e_2=10^{-7}$\n"
+    "$e_2=10^{-7}$\n",
+    "\n",
+    "We loop over 2000 different linear problems for each given dimension $n$. "
    ]
   },
   {
