additional 1D benchmark results

--- a/Notes/Summary.ipynb
+++ b/Notes/Summary.ipynb
@@ -346,8 +346,8 @@
     "# Timed versions of both GMRES functions\n",
     "\n",
     "@timer\n",
-    "@nn_preconditioner_timed(retrain_freq=retrain_freq, debug=True,InputDim=InputDim,HiddenDim=HiddenDim,HiddenDim2=HiddenDim2,OutputDim=OutputDim)\n",
-    "def MLGMRES(A, b, x0, e, nmax_iter,Err_list,ProbCount,restart,debug,refine,blist,reslist,IterErrList10,GmresRunTime):\n",
+    "@cnn_preconditionerOnline_timed(retrain_freq=retrain_freq, debug=True,InputDim=InputDim,HiddenDim=HiddenDim,OutputDim=OutputDim)\n",
+    "def MLGMRES(A, b, x0, e, nmax_iter,ML_GMRES_Time_list,ProbCount,restart,debug,refine,blist,reslist,Err_list):\n",
     "    return GMRES(A, b, x0, e, nmax_iter,restart, debug)\n",
     "\n",
     "\n",
