--- a/Notes/OnlineNNBenchmarking_1D.ipynb
+++ b/Notes/OnlineNNBenchmarking_1D.ipynb
@@ -253,10 +253,10 @@
    "source": [
     "|$n$   |100   |125   |150   |175   |200   |225   |250   |\n",
     "|---|---|---|---|---|---|---|---|\n",
-    "|GMRES   |1161   |1755   | 2492  |4155   | 4542  |   |   |\n",
-    "|MLGMRES   |1162   |1405  |1621   |2523   | 2511  |  |  |\n",
-    "|Training   |515   |504   |364   |524   |418   |   |   |\n",
-    "| MLGMRES/GMRES          |1.00      |0.800      | 0.65     | 0.607     |0.553      |     |      |"
+    "|GMRES   |1161   |1755   | 2492  |4155   | 4542  | 5628  |  7726 |\n",
+    "|MLGMRES   |1162   |1405  |1621   |2523   | 2511  |3112  |3999  |\n",
+    "|Training   |515   |504   |364   |524   |418   |478   |534   |\n",
+    "| MLGMRES/GMRES          |1.00      |0.800      | 0.65     | 0.607     |0.553      | 0.552    | 0.518     |"
    ]
   },
   {
