--- a/Notes/OnlineNNBenchmarking_1D.ipynb
+++ b/Notes/OnlineNNBenchmarking_1D.ipynb
@@ -81,6 +81,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "|$n_x=n_y$       \t| 20\t| 25  \t|\n",
+    "|---                |---\t|---\t|\n",
+    "|GMRES   \t        |1596  \t|2952 \t|\n",
+    "|MLGMRES        \t|887   \t|1861\t|\n",
+    "|Training      \t    |84.3   |344   \t|\n",
+    "|MLGMRES/GMRES  \t|0.55\t|0.63  \t|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|$n_x=n_y$       \t| 20\t| 25  \t|\n",
+    "|---                |---\t|---\t|\n",
+    "|GMRES   \t        |1774  \t|3372 \t|\n",
+    "|MLGMRES        \t|817   \t|1542\t|\n",
+    "|Training      \t    |83     |378   \t|\n",
+    "|MLGMRES/GMRES  \t|0.46\t|0.46  \t|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|$n_x=n_y$       \t| 20\t| 25  \t|\n",
+    "|---                |---\t|---\t|\n",
+    "|GMRES   \t        |1908  \t|3513 \t|\n",
+    "|MLGMRES        \t|908   \t|1358\t|\n",
+    "|Training      \t    |70     |291   \t|\n",
+    "|MLGMRES/GMRES  \t|0.47\t|0.39  \t|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Plots of run times"
    ]
   },
