--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -107,12 +107,7 @@
     "X, Y = np.meshgrid(x1, x2, sparse=False, indexing='ij')\n",
     "\n",
     "# Total number of steps in simulation\n",
-    "n_steps =200\n",
-    "\n",
-    "# Model dimention inputs, not used in this demo\n",
-    "InputDim=dim\n",
-    "HiddenDim=dim\n",
-    "OutputDim=dim"
+    "n_steps =200\n"
    ]
   },
   {
@@ -135,8 +130,12 @@
    "source": [
     "from src_dir import cnn_preconditionerOnline_timed_2D,timer,GMRES\n",
     "\n",
+    "# Note: # Model dimention inputs are not used for the current network in cnn_predictorOnline2D.py (but must be passed into wrapper)\n",
+    "InputDim=dim\n",
+    "HiddenDim=dim\n",
+    "OutputDim=dim\n",
     "\n",
-    "\n",
+    "# Note: the CNN in cnn_predictorOnline2D.py should be adjusted depending on the grid resolution. Some examples are commented out in that file. \n",
     "@timer\n",
     "@cnn_preconditionerOnline_timed_2D(retrain_freq=1,debug=True,InputDim=InputDim,HiddenDim=HiddenDim,OutputDim=OutputDim)\n",
     "def MLGMRES(A, b ,x0, e, nmax_iter,ML_GMRES_Time_list,ProbCount,restart,debug,refine,blist,reslist,Err_list,reslist_flat,ML_GMRES_Time_list2,solIndx):\n",
