add demo samples

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -1,35 +1,15 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python38564bit2da7c9a65a654ec1be73e3fa5bd2a96d",
-   "display_name": "Python 3.8.5 64-bit",
-   "language": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "In this notebook we provide a small example of our methodology to use deep learning in real time to accelerate GMRES"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "We demonstrate our real-time deep-learning methodology using the $2D$ Poisson problem. \n",
     "\n",
@@ -50,11 +30,11 @@
     "\n",
     "The gist of our idea is that our real-time deep learning methodology wraps around a provided GMRES solver, and over time\n",
     "learns an initial guess/left perconditioner that accelerates the rate of convergence of the solver."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "First, we set a number of things such as:\n",
     "- Dimension of $N \\times N$ grid\n",
@@ -62,13 +42,11 @@
     "- Tolerance for GMRES solver\n",
     "- Restarted GMRES restart parameters\n",
     "- Total number of \"time steps\""
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,22 +58,17 @@
     "# code should still work and yield resuluts for any dimension of input provided\n",
     "dim=20\n",
     "\n",
-    "\n",
-    "\n",
     "# Default initial guess used for direct \n",
     "# un-preconditioned GMRES is the zero solution\n",
     "x0=np.squeeze(np.zeros((dim,dim)))\n",
     "x0Type='Zero Solution 2D'\n",
     "\n",
-    "\n",
     "# Set tolerances for GMRES solver\n",
     "e = 1e-5\n",
-    "\n",
     "\n",
     "# Restarted GMRES parameters\n",
     "nmax_iter = 100\n",
     "restart   = 10000\n",
-    "\n",
     "\n",
     "# Create domain [-1,1]x[-1,1]\n",
     "# Define grid values at midpoints of cartesian grid\n",
@@ -113,21 +86,20 @@
     "A=mk_laplace_2d(dim,dim,bc=\"dirichlet\", xlo=0, xhi=0, ylo=0, yhi=0)\n",
     "AType='2D Laplacian'\n",
     "\n",
-    "\n",
     "# Total number of steps in simulation\n",
-    "n_steps =100"
+    "n_steps = 1000"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "A sample of the RHS used in the demo is shown below:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,9 +125,6 @@
     "\n",
     "b=b+Field\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "pp.contourf(X,Y,b)\n",
     "pp.colorbar()\n",
     "\n",
@@ -165,6 +134,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Below, we wrap the simple unprecondition GMRES algorithm implemented in `gmres.py` using a wrapper\n",
     "that implements our deep learning methodology. This wrapper contains both the neural network we\n",
@@ -172,13 +143,11 @@
     "\n",
     "The neural network can be found in `cnn_collectionOnline2D.py`, and the wrapper can be found in \n",
     "`cnn_predictorOnline2D.py`. Stay tuned for a paper the describes our methodology in detail."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +172,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "To demonstrate the performance of our approach on a series of poisson problems, we compare the wall clock time between the ML-wrapper GMRES implementation and the direct GMRES implementation.  The loop below (that loops for the number of steps set above) essentially has the following structure:\n",
     "\n",
@@ -213,20 +184,17 @@
     "\n",
     "\n",
     "Scroll past the outputs to see some plots"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from src_dir import Gauss_pdf_2D,resid\n",
-    "\n",
+    "from src_dir import Gauss_pdf_2D,resid,StatusPrinter\n",
     "\n",
     "#Set the numpy seed\n",
     "np.random.seed(0)\n",
@@ -238,10 +206,8 @@
     "SpeedUp=[]\n",
     "trainTime_list=[]\n",
     "\n",
-    "\n",
     "# Set debug mode)prints more information to screen)\n",
     "debug=True\n",
-    "\n",
     "\n",
     "# initalize lists that will hold all RHS and reisudals\n",
     "Err_list=[]\n",
@@ -271,9 +237,6 @@
     "    # b=np.maximum(xloc*2*X*np.sin(ProbIdx),yloc*2*Y*np.cos(ProbIdx))  # Linear gradient example\n",
     "    b=b*(dx**2.0) # Finite difference grid spacing\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "    # First GMRES call (solve up to e1 tolerance) with ML wrapper\n",
     "    OutList1,run_time1_ML=MLGMRES(A, b, x0, e, ML_GMRES_Time_list,ProbIdx,debug,blist,reslist,Err_list,reslist_flat,IterErrList)  \n",
     "    Out=OutList1[0]\n",
@@ -288,8 +251,6 @@
     "    # Collect ML assisted Run-times\n",
     "    run_time_ML_list.append(run_time1_ML)\n",
     "    \n",
-    "\n",
-    "\n",
     "    # Direct GMRES call up to e1 tolerance\n",
     "    NonML_Out1,run_time1=GMRES_timed(A, b, x0, e, nmax_iter,restart, debug)  \n",
     "    NonML_Err=resid(A, NonML_Out1, b)\n",
@@ -302,10 +263,14 @@
     "    ## Ratio of run-times\n",
     "    SpeedUp.append(run_time1/ML_GMRES_Time_list[-1])\n",
     "    \n",
+    "    # print(\"Current 'Time-step':\",ProbIdx)\n",
+    "    # print(\"Speed up:\", SpeedUp[-1])\n",
+    "    # print(\"**********\")\n",
+    "    StatusPrinter().update_simulation(SpeedUp[-1], ProbIdx)\n",
     "\n",
-    "    print(\"Current 'Time-step':\",ProbIdx)\n",
-    "    print(\"Speed up:\", SpeedUp[-1])\n",
-    "    print(\"**********\")\n",
+    "\n",
+    "StatusPrinter().finalize()\n",
+    "\n",
     "\n",
     "MLGMRES_GMRES_ONLY=sum(ML_GMRES_Time_list)\n",
     "run_time=sum(GmresRunTimeOriginal)\n",
@@ -313,32 +278,27 @@
     "trainTime_total=sum(trainTime_list)\n",
     "\n",
     "\n",
-    "print(\"Runtime of Non-decorated version is:\",run_time)\n",
-    "\n",
-    "print(\"Runtime of MLGMRES decorator is:\",run_time_ML)\n",
-    "\n",
-    "print(\"Runtime of MLGMRES (only GMRES time) is:\",MLGMRES_GMRES_ONLY)\n",
-    "\n",
-    "print(\"Runtime of training (backprop) is:\",trainTime_total)"
+    "print(\"Runtime of Non-decorated version is: \",     run_time)\n",
+    "print(\"Runtime of MLGMRES decorator is: \",         run_time_ML)\n",
+    "print(\"Runtime of MLGMRES (only GMRES time) is: \", MLGMRES_GMRES_ONLY)\n",
+    "print(\"Runtime of training (backprop) is: \",       trainTime_total)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Below, the error for the 5th GMRES iteration for every \"time-step\"  is plotted. The gist is that we see neural network is learning to produce initial guesses that improve the error at this iteration as our simulation progresses.  "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as pp\n",
     "from src_dir import moving_average\n",
-    "\n",
-    "\n",
     "\n",
     "# Compute moving average of GMRES and MLGMRES error\n",
     "AVG=np.zeros((n_steps,1))\n",
@@ -354,11 +314,9 @@
     "for j in range(0,n_steps):\n",
     "    AVGML[j]=moving_average(np.asarray(Err_Array_ML[:j]),j)    \n",
     "\n",
-    "\n",
     "# Compute moving average of GMRES and MLGMRES run-times\n",
     "GmresRunTimeOriginal_AVG=np.zeros((n_steps,1))\n",
     "ML_GMRES_Time_AVG=np.zeros((n_steps,1))\n",
-    "\n",
     "\n",
     "for j in range(0,n_steps):\n",
     "    GmresRunTimeOriginal_AVG[j]=moving_average(np.asarray(GmresRunTimeOriginal[:j]),j)\n",
@@ -369,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,16 +344,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Below, the time-to-solution for every \"time-step\"  is plotted.\n",
     "Here, we see the neural network is learning to produce initial guesses that improve the overall time-to-solution for every iteration as our simulation progresses.  "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,15 +371,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "In the figure below, the GMRES iterations for a single linear problem is plotted. This figures is particularly useful for understanding why we are getting a speed-up at all. In a nut-shell, we get a speed up because the NN-provided intial guess temporarily improves the rate of convergence of GMRES"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,18 +393,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The ratio of GMRES/MLGMRES time-to-solutions are plotted below for the first $e_1$ tolerance. \n",
     "It should be noted that our methodology wraps around the direct GMRES solver,\n",
     "so the exact same solver is used in both approaches, and only differ by what initial condition\n",
     "(or effectively left-preconditioner) is applied. "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,6 +417,34 @@
     "pp.ylabel('GMRES/MLGMRES')\n",
     "pp.title(\"NN Speed Up \")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
