--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -147,6 +147,200 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: 1 b: 2\n",
+      "a: 2 b: 4\n",
+      "a: 3 b: 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import functools\n",
+    "\n",
+    "class SettingsContainer(object):\n",
+    "    \n",
+    "    def __init__(self, a, b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "        \n",
+    "def gen_wrapper(settings):\n",
+    "    \n",
+    "    def my_decorator(func):\n",
+    "        \n",
+    "        @functools.wraps(func)\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            print(\"a:\", settings.a, \"b:\", settings.b)\n",
+    "            settings.a += 1\n",
+    "            return func(*args, **kwargs)\n",
+    "        \n",
+    "        return wrapper\n",
+    "    return my_decorator\n",
+    "\n",
+    "sc = SettingsContainer(1, 2)\n",
+    "\n",
+    "@gen_wrapper(sc)\n",
+    "def f(x, y):\n",
+    "    return x+y\n",
+    "\n",
+    "f(1, 2)\n",
+    "sc.b = 4\n",
+    "f(1, 2)\n",
+    "f(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ArgMap(object):\n",
+    "\n",
+    "    def __init__(self, arg_map=[]):\n",
+    "        object.__setattr__(self, \"__map\", dict())\n",
+    "        for i, am in enumerate(arg_map):\n",
+    "            setattr(self, am, i)\n",
+    "\n",
+    "    def __getattr__(self, attr):\n",
+    "        return self.vmap()[attr]\n",
+    "\n",
+    "    def __setattr__(self, attr, val):\n",
+    "        self.vmap()[attr] = val\n",
+    "\n",
+    "    def __hasattr__(self, attr):\n",
+    "        return attr in self.vmap()\n",
+    "\n",
+    "    def vmap(self):\n",
+    "        return object.__getattribute__(self, \"__map\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "am = ArgMap()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "am.A = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "am.A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'B'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-79-612166c71589>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mam\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-75-5d8df1398487>\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, attr)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mattr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'B'"
+     ]
+    }
+   ],
+   "source": [
+    "am.B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "am = ArgMap([\"a\", \"B\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "am.a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "am.B"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -167,8 +361,8 @@
     "    return GMRES(A, b, x0, e, nmax_iter,restart, debug)\n",
     "\n",
     "@timer\n",
-    "def GMRES_timed(A, b, x0, e, nmax_iter,restart,debug):\n",
-    "    return GMRES(A, b, x0, e, nmax_iter,restart, debug)"
+    "def GMRES_timed(A, b, x0, e, nmax_iter, restart, debug):\n",
+    "    return GMRES(A, b, x0, e, nmax_iter, restart, debug)"
    ]
   },
   {
