--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -233,11 +233,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter=31 speedup=1.0000 loss=0.0000e+00 parameters=0 data size=0\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/blaschke/local/virtualenv/py3/lib/python3.8/site-packages/torch/nn/functional.py:3451: UserWarning: Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter=105 speedup=1.1776 loss=1.0459e-03 parameters=13749 data size=40\r"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'trianer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-475a7b119640>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0mtrainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mProbCount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mProbIdx\u001b[0m  \u001b[0;31m# TODO: This should probably be automatically incremented\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[0;31m# OutList1,run_time1_ML=MLGMRES(A, b, x0, e, ML_GMRES_Time_list,ProbIdx,debug,blist,reslist,Err_list,reslist_flat,IterErrList)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 47\u001b[0;31m     \u001b[0mOut\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrun_time1_ML\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMLGMRES\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnmax_iter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrestart\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdebug\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     48\u001b[0m     \u001b[0;31m# Out=OutList1[0]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[0;31m# ML_GMRES_Time_list=OutList1[1]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Science/GMRES-Learning/src_dir/util.py\u001b[0m in \u001b[0;36mwrapper_timer\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mwrapper_timer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mperf_counter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m         \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0mend_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mperf_counter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m         \u001b[0mrun_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mend_time\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart_time\u001b[0m  \u001b[0;31m# 3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Science/GMRES-Learning/src_dir/cnn_predictorOnline2D.py\u001b[0m in \u001b[0;36mspeedup_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    442\u001b[0m                         \u001b[0;31m#TODO: Do we need np.asarray here?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    443\u001b[0m                         trainer.preconditioner.add(\n\u001b[0;32m--> 444\u001b[0;31m                                 \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrianer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mblist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    445\u001b[0m                                 \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreslist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    446\u001b[0m                             )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'trianer' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from src_dir import Gauss_pdf_2D,resid,StatusPrinter\n",
     "\n",
@@ -285,18 +321,20 @@
     "    # First GMRES call (solve up to e1 tolerance) with ML wrapper\n",
     "    trainer.ProbCount = ProbIdx  # TODO: This should probably be automatically incremented\n",
     "    # OutList1,run_time1_ML=MLGMRES(A, b, x0, e, ML_GMRES_Time_list,ProbIdx,debug,blist,reslist,Err_list,reslist_flat,IterErrList)  \n",
-    "    OutList1,run_time1_ML = MLGMRES(A, b, x0, e, nmax_iter, restart, debug)  \n",
-    "    Out=OutList1[0]\n",
+    "    Out, run_time1_ML = MLGMRES(A, b, x0, e, nmax_iter, restart, debug)\n",
+    "    # Out=OutList1[0]\n",
     "    # ML_GMRES_Time_list=OutList1[1]\n",
-    "    trainTime_list.append(OutList1[2])\n",
+    "    # trainTime_list.append(OutList1[2])\n",
     "    # blist=OutList1[3]\n",
-    "    reslist=OutList1[4]\n",
-    "    Err_list=OutList1[5]\n",
-    "    reslist_flat=OutList1[6]\n",
-    "    IterErrList=OutList1[7]\n",
+    "    #reslist=OutList1[4]\n",
+    "    # Err_list=OutList1[5]\n",
+    "    # reslist_flat=OutList1[6]\n",
+    "    # IterErrList=OutList1[7]\n",
     "\n",
     "    # Collect ML assisted Run-times\n",
     "    run_time_ML_list.append(run_time1_ML)\n",
+    "    if len(trainer.trainTime) > 0:\n",
+    "        trainTime_list.append(trainer.trainTime[-1]) # TODO: this second list is not needed\n",
     "    \n",
     "    # Direct GMRES call up to e1 tolerance\n",
     "    NonML_Out1,run_time1=GMRES_timed(A, b, x0, e, nmax_iter, restart, debug)  \n",
@@ -308,7 +346,7 @@
     "    GmresRunTimeOriginal.append(run_time1)\n",
     "\n",
     "    ## Ratio of run-times\n",
-    "    SpeedUp.append(run_time1/ML_GMRES_Time_list[-1])\n",
+    "    SpeedUp.append(run_time1/trainer.ML_GMRES_Time_list[-1])\n",
     "    \n",
     "    # Update user on status\n",
     "    StatusPrinter().update_simulation(SpeedUp[-1], ProbIdx)\n",
@@ -317,7 +355,7 @@
     "StatusPrinter().finalize()\n",
     "\n",
     "\n",
-    "MLGMRES_GMRES_ONLY=sum(ML_GMRES_Time_list)\n",
+    "MLGMRES_GMRES_ONLY=sum(trainer.ML_GMRES_Time_list)\n",
     "run_time=sum(GmresRunTimeOriginal)\n",
     "run_time_ML=sum(run_time_ML_list)\n",
     "trainTime_total=sum(trainTime_list)\n",
